--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>pheew/dotgit @ GitHub</title>
+	<title>dotGit @ GitHub</title>
 	
 	<style type="text/css">
 		body {
@@ -57,9 +57,14 @@
 
 </p>
 <h2>Authors</h2>
-<p>Niek Bruins (n.bruins@diract-it.nl)<br/>Pheew (nbruins@gmail.com)<br/>Mark Gerrits (sjonge@hotmail.com)<br/><br/>      </p>
+<p>Niek Bruins (n.bruins@diract-it.nl)
+<br/>Pheew (nbruins@gmail.com)
+<br/>Mark Gerrits (sjonge@hotmail.com)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>Niek (nbruins@gmail.com)<br/>      </p>
+<p>Niek (nbruins@gmail.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
