--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>dotGi2t @ GitHub</title>
+	<title>dotGit @ GitHub</title>
 	
 	<style type="text/css">
 		body {
@@ -46,7 +46,7 @@
     </div>
       
     <h1><a href="http://github.com/pheew/dotgit">dotgit</a> 
-      <span class="small">by <a href="http://github.com/pheew">pheew</a></small></h1>
+      <span class="small">by a <a href="http://github.com/pheew">pheew</a></small></h1>
 
     <div class="description">
       A Git implementation for .NET written in C#
