--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #c91351;
+  		background-color: #05386b;
 		  font-family: "helvetica"; 
   		color: #ffffff;
     }
@@ -18,12 +18,12 @@
       margin: 0 auto;
       width: 700px;
     }
-		h1 { font-size: 3.8em; color: #36ecae; margin-bottom: 3px; }
+		h1 { font-size: 3.8em; color: #cde8fb; margin-bottom: 3px; }
 		h1 .small { font-size: 0.4em; }
 		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #36ecae; }
-    h3 { text-align: center; color: #36ecae; }
-    a { color: #36ecae; }
+		h2 { font-size: 1.5em; color: #cde8fb; }
+    h3 { text-align: center; color: #cde8fb; }
+    a { color: #cde8fb; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
 		pre { background: #000; color: #fff; padding: 15px;}
@@ -49,7 +49,7 @@
       <span class="small">by a <a href="http://github.com/pheew">pheew</a></small></h1>
 
     <div class="description">
-      A Git implementation for .NET written in C#
+      A Git implementation for .NET written in C#. The goal is to support all basic Git functions in managed code without relying on a 'git.exe' wrapper.
     </div>
 
     <h2>Dependencies</h2>
@@ -57,8 +57,7 @@
 
 </p>
 <h2>Authors</h2>
-<p>Niek Bruins (n.bruins@diract-it.nl)
-<br/>Pheew (nbruins@gmail.com)
+<p>Pheew (nbruins@gmail.com)
 <br/>Mark Gerrits (sjonge@hotmail.com)
 <br/>
 <br/>      </p>
