--- a/index.html
+++ b/index.html
@@ -61,9 +61,14 @@
 <br/>Mark Gerrits (sjonge@hotmail.com)
 <br/>
 <br/>      </p>
-<h2>Contact</h2>
-<p>Niek (nbruins@gmail.com)
-<br/>      </p>
+<h2>Current Status</h2>
+<p>2008/12/23 : dotGit is currently able to read your Git configuration as well as read/traverse your index and packs.</p>
+
+<h2>More Information</h2>
+<p>This project is managed with <a href="http://pheew.lighthouseapp.com/">Lighthouse</a> where you can find our roadmap and issues we are currently working on.<br/>      </p>
+
+
+
 
 
     <h2>Download</h2>
