--- a/index.html
+++ b/index.html
@@ -53,19 +53,16 @@
     </div>
 
     <h2>Dependencies</h2>
-<p>A Git repository :-)
-
-</p>
+<p>A Git repository :-) and a .NET compiler (Mono support is guaranteed at this time)</p>
 <h2>Authors</h2>
-<p>Pheew (nbruins@gmail.com)
+<p>Niek Bruins (nbruins@gmail.com)
 <br/>Mark Gerrits (sjonge@hotmail.com)
-<br/>
 <br/>      </p>
 <h2>Current Status</h2>
-<p>2008/12/23 : dotGit is currently able to read your Git configuration as well as read/traverse your index and packs.</p>
+<p><b>2008/12/23 :</b> dotGit is currently able to read your Git configuration as well as read/traverse your index and packs.</p>
 
-<h2>More Information</h2>
-<p>This project is managed with <a href="http://pheew.lighthouseapp.com/">Lighthouse</a> where you can find our roadmap and issues we are currently working on.<br/>      </p>
+<p>This project is managed with <a href="http://pheew.lighthouseapp.com/">Lighthouse</a> where you can find our roadmap and issues we are currently working on. You can 
+also report issues and/or wishes here.</p>
 
 
 
