--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
 
     <h2>Dependencies</h2>
-<p>A Git repository :-) and a .NET compiler (Mono support is guaranteed at this time)</p>
+<p>A Git repository :-) and a .NET compiler (Mono support is <u>not</u> guaranteed at this time)</p>
 <h2>Authors</h2>
 <p>Niek Bruins (nbruins@gmail.com)
 <br/>Mark Gerrits (sjonge@hotmail.com)
