--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
       
-    <h1><a href="http://github.com/pheew/dotgit">dotgit</a> 
+    <h1><a href="http://github.com/pheew/dotgit"><img src="images/logo.png" border="0" alt="dotGit" /></a> 
       <span class="small">by a <a href="http://github.com/pheew">pheew</a></small></h1>
 
     <div class="description">
