--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       width: 700px;
     }
 		h1 { font-size: 3.8em; color: #cde8fb; margin-bottom: 3px; }
-		h1 .small { font-size: 0.4em; }
+		.small { font-size: 0.8em; }
 		h1 a { text-decoration: none }
 		h2 { font-size: 1.5em; color: #cde8fb; }
     h3 { text-align: center; color: #cde8fb; }
@@ -45,8 +45,8 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
       
-    <h1><a href="http://github.com/pheew/dotgit"><img src="images/logo.png" border="0" alt="dotGit" /></a> 
-      <span class="small">by a <a href="http://github.com/pheew">pheew</a></small></h1>
+    <p><a href="http://github.com/pheew/dotgit" style="text-decoration:none;"><img src="images/logo.png" border="0" alt="dotGit" /><br />
+      <span class="small">by a <a href="http://github.com/pheew">pheew</a></small></p>
 
     <div class="description">
       A Git implementation for .NET written in C#. The goal is to support all basic Git functions in managed code without relying on a 'git.exe' wrapper.
